--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -15,12 +15,21 @@
 }
 
 .carousel .item {
-    height: 600px;
+    height: auto;
 }
 
 .carousel img {
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 600px;
+    height: auto;
+}
+
+span.icon-large {
+    margin-top: 20px;
+}
+
+.uniarte-icon {
+    font-size: 15px;
+    padding-bottom: 0px;
 }
